package hcmuaf.edu.vn.fit.course_service.client;

import hcmuaf.edu.vn.fit.course_service.dto.response.FacultyResponse;
import hcmuaf.edu.vn.fit.course_service.dto.response.LecturerResponse;

import hcmuaf.edu.vn.fit.course_service.dto.response.SinhVienResponse;
import hcmuaf.edu.vn.fit.course_service.dto.response.UserResponse;
import org.springframework.cloud.openfeign.FeignClient;
import org.springframework.data.domain.Page;
import org.springframework.http.ResponseEntity;
import org.springframework.web.bind.annotation.GetMapping;
import org.springframework.web.bind.annotation.PathVariable;
import org.springframework.web.bind.annotation.RequestHeader;
import org.springframework.web.bind.annotation.RequestParam;

import java.util.List;
import java.util.Map;

@FeignClient(
        name = "user-service",
        url = "${clients.user-service.url:http://localhost:8081/api/v1/user-service}",
        configuration = FeignConfig.class
)
public interface UserClient {

    @GetMapping("/users/{id}")
    UserResponse getUser(@PathVariable("id") String id);

    @GetMapping("/users/batch")
    Map<String, UserResponse> getUsers(@RequestParam("ids") List<String> ids);

    @GetMapping("/admin/users/{userId}")
    SinhVienResponse getSinhVien(@PathVariable("userId") String id);


    @GetMapping("/lecturer/lecturers/{lecturerId}")
    LecturerResponse getLecturer(@PathVariable("lecturerId") String lecturerId);

    @GetMapping("/lecturer/lecturers/by-user/{userId}")
    LecturerResponse getLecturerByUserId(@PathVariable("userId") String userId);
    @GetMapping("/users/count")
    Long countUsers();
    @GetMapping("/lecturer/count/{departmentName}")
    Long countLecturers(
            @RequestHeader("X-User-ID") String userId,
            @PathVariable("departmentName") String departmentName
    );
    @GetMapping("/faculties/{facultyName}/departments")
    List<String> getDepartmentNamesByFaculty(@RequestHeader("X-User-ID") String userId,@PathVariable("facultyName") String facultyName);


    @GetMapping("/faculties/department/{departmentName}")
    FacultyResponse getFacultyByDepartmentName(@RequestHeader("X-User-ID") String userId,@PathVariable("departmentName") String departmentName);

    @GetMapping("/faculties/{facultyName}")
    List<LecturerResponse>getLecturersByFaculty(@RequestHeader("X-User-ID") String userId,@PathVariable("facultyName") String facultyName);
}

