package hcmuaf.edu.vn.fit.course_service.entity.enums;

public enum NotificationType {
    POST,
    MESSAGE,
    FRIENDS,
    COMMENT,
    LIKE
}
